corrections contraste

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ a:hover {
 .bg-t-edge {
     background: top no-repeat;
 }
-
+/*
 .bloc-bg-texture::before {
     content: "";
     background-size: 2px 2px;
@@ -88,11 +88,10 @@ a:hover {
     bottom: 0;
     left: 0;
     right: 0;
-}
+}*/
 
-.texture-paper::before {
-    background: url("img/texture-paper.png");
-    background-size: 280px 280px;
+.texture-paper p {
+    color: #ddd!important;
 }
 
 .b-parallax {
@@ -731,7 +730,7 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: #ddd!important;
 }
 
 h4 {
@@ -779,15 +778,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #c14810;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #fff!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #c14810;
     color: #FFFFFF!important;
 }
 
@@ -805,7 +804,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #c14810!important;
 }
 
 .ltc-atomic-tangerine:hover {
